--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@supabase/supabase-js": "^2.57.4",
     "expo": "~54.0.10",
     "expo-status-bar": "~3.0.8",
+    "formik": "^2.4.6",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.16.0",
     "tailwindcss": "^3.4.17",
+    "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
